@@ -35,6 +35,9 @@ JH/07 Retire gnutls_require_mac et.al.  These were nonfunctional since 4.80
 JH/08 Bug 1836: Fix crash in VRFY handling when handed an unqualified name
       (lacking @domain).  Apply the same qualification processing as RCPT.
 
+PP/01 Changed default Diffie-Hellman parameters to be Exim-specific, created
+      by me.
+
 
 Exim version 4.87
 -----------------
